# keyboard-firmware

./: .gitignore  Cargo.toml  README.md  flake.nix  ideas.org  screenlog.0
.cargo/: config.toml
src/: layout.rs  main.rs  matrix.rs  usb_manager.rs
