[package]
edition = "2021"
name = "rp2040-project-template"
version = "0.1.0"

[dependencies]
cortex-m = "0.7"
# cortex-m-rt = "0.7"
embedded-hal = { version = "0.2.7", features = ["unproven"] }

# defmt = "0.3"
# defmt-rtt = "0.4"
panic-probe = "0.3"
sparkfun-pro-micro-rp2040 = "0.6.0"
smart-leds = "0.3.0"
pio = "0.2.1"
ws2812-pio = "0.6.0"
nb = "1.1.0"
panic-halt = "0.2.0"

# TODO might need this for the USB stuff
rp2040-hal = { version="0.8", features=["rt", "critical-section-impl"] }
# Not sure what this does yet..
# rp2040-boot2 = "0.2"


keyberon= {git = "https://github.com/TeXitoi/keyberon", rev="24bd53f850bb5f07b1eee36fe3ac75082d439c10" }
usb-device = "0.2.9"
rtic = {version="2.0.0", git="https://github.com/rtic-rs/rtic", features=["thumbv6-backend"]}
rtic-monotonics = {version="1.0.0", git="https://github.com/rtic-rs/rtic", features=["rp2040"]}
fugit = "0.3"
rp2040-pac = "0.4.0"
embedded-time = "0.12.1"


# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
